# teledal

./: .gitignore  hdfs_regex_pairs.yaml  pyproject.toml
src/teledal/: preprocessor.py  teledal.py  train.py
src/teledal/data_processing/: _special_constants.py
src/teledal/data_processing/predict_next/: data.py  preprocessor.py
src/teledal/model/: __init__.py  _loss_fn.py  teledal.py
